[tool.poetry]
name = "electronics-shop-project"
version = "0.1.0"
description = ""
authors = ["kirillskyeng <kirill.netreba@skyeng.ru>"]
readme = "README.md"
packages = [{include = "electronics_shop_project"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
accessify = "^0.3.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
blask = "^0.2.3"
isort = "^5.12.0"
mypy = "^1.7.0"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
